--- a/style.css
+++ b/style.css
@@ -1,12 +1,17 @@
 * {
     margin: 0;
     padding: 0;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
     box-sizing: border-box;
     font-family: Arial, sans-serif;
 }
 
 body {
     line-height: 1.6;
+   
 }
 
 header {
@@ -67,33 +72,32 @@ nav ul li a {
     cursor: pointer;
 }
 
-.video-highlights, .features, .benefits, .collections, .clients, .tagging {
+.video-highlights, .features, .clients, .tagging {
     padding: 2rem;
     text-align: center;
 }
 
-.video-highlights h2, .features h2, .benefits h2, .collections h2, .clients h2, .tagging h2 {
+.video-highlights h2, .features h2, .clients h2, .tagging h2 {
     margin-bottom: 1rem;
 }
 
-.videos, .feature-list, .benefit-list, .collection-list, .client-list {
+.videos, .feature-list, .client-list {
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
     text-align: center;
 }
-
-.video, .feature, .benefit, .collection, .client {
+ .feature, .client {
     margin: 1rem;
     flex: 1;
     max-width: 30%;
 }
 
-.video img, .collection img, .client img, .supported-platforms img {
+.video img, .client img, .supported-platforms img {
     max-width: 100%;
 }
 
-.video p, .feature p, .benefit p {
+.video p, .feature p{
     margin: 0.5rem 0;
 }
 
@@ -118,6 +122,7 @@ nav ul li a {
 .tagging-2 {
     text-align: center;
     justify-content: space-between;
+    gap: 100%;
     background-color: lightgray;
 }
 footer {
@@ -126,12 +131,120 @@ footer {
     text-align: center;
     padding: 1rem;
 }
-.benifit0, .benefit00, .b1{
-    text-align: center;
-    display: inline;
     /* margin: 20px;
     padding:20px; */
-}
+    .benefits {
+        width: 80%;
+        margin: auto;
+        text-align: center;
+    }
+    
+    .benefits h2 {
+        font-size: 2em;
+        margin-bottom: 20px;
+    }
+    
+    .benefit-item {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        margin: 20px 0;
+    }
+    
+    .benefit-item .icon {
+        flex-shrink: 0;
+        width: 50px;
+        height: 50px;
+        margin-right: 20px;
+        background-size: cover;
+        background-repeat: no-repeat;
+    }
+    
+    .benefit-item .icon.personalized {
+        background-image: url('./pics/benefit1.png');
+    }
+    
+    .benefit-item .icon.engagement {
+        background-image: url('./pics/benefit2.png');
+    }
+    
+    .benefit-item .icon.analytics {
+        background-image: url('./pics/benefit3.png');
+    }
+    
+    .benefit-item .content {
+        text-align: center;
+
+    }
+    
+    .benefit-item .content h3 {
+        font-size: 1.2em;
+        margin: 0;
+    }
+    
+    .benefit-item .content p {
+        margin: 5px 0 0;
+        color: #666;
+    }
+    .video-collections-container {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+    
+    .video-collections {
+        text-align: center;
+        background: white;
+        padding: 20px;
+        /* border-radius: 10px; */
+    }
+    
+    .video-collections h2 {
+        font-size: 2em;
+        margin-bottom: 20px;
+    }
+    
+    .video-collection {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap:50px;
+        margin-bottom: 20px;
+    }
+    
+    .video-thumbnail {
+        width: 200px;
+        height: 150px;
+        position: relative;
+        background-size: cover;
+        background-position: center;
+        border-radius: 10px;
+        overflow: hidden;
+    }
+    
+    .video-thumbnail.startups {
+        background-image: url('./pics/collection1.png');
+    }
+    
+    .video-thumbnail.machine-learning {
+        background-image: url('./pics/collection2.png');
+    }
+    
+    .video-thumbnail .overlay {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        padding: 10px;
+        color: white;
+        font-size: 1.2em;
+        text-align: center;
+        transform: translate(-50%, -50%);
+    }
+    
+    p {
+        margin-top: 0;
+    }
+    
 .hero{
     position: relative;
     text-align: center;
@@ -144,29 +257,172 @@ footer {
     transform: translate(-50%, -50%);
   }
 @media (max-width: 768px) {
-    /* nav ul {
+    nav ul {
         flex-direction: column;
-    } */
-    .video, .feature, .benefit, .collection, .client {
+    }
+    .video, .feature, .benefit, .collection, .client, .client-list{
         max-width: 100%;
     }
 }
 @media (max-width: 534px) {
+   
     nav ul {
         /* flex-direction: column; */
+        font-size: medium;
     }
-    .video, .feature, .benefit, .collection, .client {
-        /* max-width: 100%; */
+    .video, .feature, .benefit, .collection, .client-list,{
+        max-width: auto;
+        font-size: medium;
+
+    }
+    .benefit-item, .video-collection, .feature-list{ 
+        flex-direction: column;
     }
 }
 
-@media (max-width: 400px) {
+@media (max-width: 350px) { 
+    .benefit-item, .video-collection, .feature-list{ 
+        flex-direction: column;
+    }
     nav ul {
-        flex-direction: row;
+        
+        flex-direction: column;
         font-size: small;
     }
-    .video, .feature, .benefit, .collection, .client.hero{
-        max-width: 100%;
-        font-size: small;
+    .video, .feature, .benefit, .collection, .hero, h1, .client-list{
+        max-width: auto;
+        font-size: xx-small;
+        list-style: none;
+
     }
+    .video-thumbnail.startups,.video-thumbnail.machine-learning {
+        justify-content: center;
+    }
+    .menu-icon {
+        display: block;
+    }
+
+     .nav-links {
+        display: none;
+        flex-direction: column;
+        width: 100%;
+        background-color: #333;
+        position: absolute;
+        top: 60px;
+        left: 0;
+        padding: 0;
+    }
+}
+
+
+@media (max-width: 768px) {
+    nav ul {
+        flex-direction: column;
+    }
+    .video, .feature, .benefit, .collection, .client {
+        max-width: 100%;
+    }
+}
+
+body, html {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+}
+
+header {
+    width: 100%;
+    background-color: white;
+    color: black;
+}
+
+.navbar {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 10px 20px;
+    position: relative;
+}
+/* .sub-div{
+    background-color: #666;
+} */
+
+.logo {
+    font-size: 1.5em;
+}
+
+.nav-links {
+    list-style: none;
+    display: flex;
+    gap: 20px;
+    z-index: auto;
+}
+
+.nav-links li a {
+    text-decoration: none;
+    color: black;  
+    /* vvv */
+}
+
+.menu-icon {
+    display: none;
+    font-size: 1.5em;
+    cursor: pointer;
+}
+
+#menu-toggle {
+    display: none;
+}
+
+@media (max-width: 768px) {
+    .nav-links {
+        display: none;
+        flex-direction: column;
+        width: 100%;
+        background-color: white;
+        position: absolute;
+        top: 60px;
+        left: 0;
+        padding: 0;
+        z-index: 999;
+    }
+/* nmmn */
+#menu-toggle {
+    display:;
+}
+/* .overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgb(177, 132, 132);
+    z-index: 1;
+    color: #ffffff;
+}
+    #menu-toggle:checked ~ .overlay {
+        display: block;
+    }
+
+    #menu-toggle:checked ~ .nav-links {
+        display: flex;
+    } */
+
+    /* jbj */
+    .nav-links li {
+        width: 100%;
+        text-align: center;
+        padding: 10px 0;
+        
+    }
+
+    .menu-icon {
+        display: block;
+    }
+
+    #menu-toggle:checked + .menu-icon + .nav-links {
+        display: flex;
+    }
+
 }
